--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   flutter:
     sdk: flutter
   lottie: ^1.2.1
+  flutter_advanced_drawer:
+  iconsax:
 
 
   # The following adds the Cupertino Icons font to your application.
