--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   lottie: ^1.2.1
   flutter_advanced_drawer:
   syncfusion_flutter_calendar:
+  simple_animations: ^4.0.1
   iconsax:
 
 
